[package]
name = "port-cycle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
kube = { version = "3.1.0", features = ["runtime", "client", "rustls-tls"] }
kube-leader-election = "0.43.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
